flexbox works but solve npm spacing issue

--- a/style.css
+++ b/style.css
@@ -5,59 +5,75 @@ body {
     font-family: 'Lato', sans-serif;
     max-width: 100%;
     height: auto;
-    display: flex;
     background-color: pink;
 }
 
 /*container rond alles*/
 .wrapper {
     display: flex;
+    justify-content: center;
+    flex-direction: row;
+    height: 100%;
+    border-style: solid;
 }
+.grunt, .gulp, .githooks, .npm {
+    border-style: solid;
+}
+
+/*OPMAAK GENERAL*/
+
+img {
+    padding: 50px; /*verplaatst ALLE img naar rechterkant*/
+}
+
+
+
 
 
 /*GRUNT KAART*/
 
 .container-grunt { /*eerste kaart*/
     background-color: white;
-    max-width: 25%;
+    max-width: 100%;
     height: auto;
     padding-left: 15px;
-    flex: 1;
-    justify-self: center;
+    flex-direction: column;
 }
 
 .resize-grunt { /*afbeelding verkleinen, best klein in voorbeeld ! */
-    max-width: 30%;
+    max-width: 100%;
     height: auto;
-    display: block;
+    width: 220px;
 }
 
 .container-grunt h1 { /*styling header*/
     color: rgba(44, 173, 44, 0.815);
     font-weight: normal;
+    padding: 30px;
+    top: 330px;
 }
 
 .container-grunt p { /*styling paragraph*/
     height: auto;
     text-align: justify;
     color: rgba(31, 31, 31, 0.842);
+    padding: 30px; /* verschuift 30px naar rechts (door rand) */
 }
 
 /*GULP KAART*/
 
 .container-gulp { /*eerste kaart*/
     background-color: white;
-    max-width: 25%;
+    max-width: 100%;
     height: auto;
     padding-left: 15px;
-    flex: 1;
-    justify-self: center;
+    flex-direction: column;
 }
 
 .resize-gulp { /*afbeelding verkleinen, best klein in voorbeeld ! */
-    max-width: 20%;
+    max-width: 100%;
     height: auto;
-    display: block;
+    width: 110px;
 }
 
 .container-gulp h1 { /*styling header*/
@@ -67,25 +83,24 @@ body {
 
 .container-gulp p { /*styling paragraph*/
     height: auto;
-    text-align: justify;
     color: rgba(31, 31, 31, 0.842);
+    padding: 58px 0;
 }
 
 /*GIT HOOKS KAART*/
 
 .container-githooks { /*eerste kaart*/
-    background-color: white;
-    max-width: 25%;
-    height: auto;
     padding-left: 15px;
-    flex: 1;
-    justify-self: center;
+    background-color: white;
+    max-width: 100%;
+    height: auto;
+    flex-direction: column;
 }
 
 .resize-githooks { /*afbeelding verkleinen, best klein in voorbeeld ! */
-    max-width: 30%;
+    max-width: 100%;
     height: auto;
-    display: block;
+    width: 250px;
 }
 
 .container-githooks h1 { /*styling header*/
@@ -95,24 +110,24 @@ body {
 
 .container-githooks p { /*styling paragraph*/
     height: auto;
-    text-align: justify;
     color: rgba(31, 31, 31, 0.842);
+    padding: 50px 0px;
 }
 
 /*NPM RUN KAART*/
 
 .container-npm { /*eerste kaart*/
-    background-color: white;
-    max-width: 25%;
-    height: auto;
     padding-left: 15px;
-    flex: 1;
-    justify-self: center;
+    background-color: white;
+    max-width: 100%;
+    height: auto;
+    flex-direction: column;
 }
 
 .resize-npm { /*afbeelding verkleinen, best klein in voorbeeld ! */
-    max-width: 30%;
+    max-width: 100%;
     height: auto;
+    width: 200px;
 }
 
 .container-npm h1 { /*styling header*/
@@ -121,7 +136,6 @@ body {
 }
 
 .container-npm p { /*styling paragraph*/
-    height: auto;
-    text-align: justify;
     color: rgba(31, 31, 31, 0.842);
+    padding: 50px 0px;
 }
